--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <form
                                     action="https://velofkt.us17.list-manage.com/subscribe/post?u=8c8be0d8981c3a7869adb1848&amp;id=b788c4f03f&amp;f_id=00d9dee3f0"
                                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    target="_blank">
+                                    target="_self">
                                     <div class="input-group">
                                         <input type="email" value="" name="EMAIL" id="mce-EMAIL" required="required"
                                             class="form-control">
@@ -51,16 +51,14 @@
                                         </span>
                                     </div>
 
+                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iSpo4g" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+
                                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
                                             type="text" name="b_97f1bc02efa56031b67a2b00f_fc7b4ce646" tabindex="-1"
                                             value=""></div>
                                 </form>
                                 <p>Subscribe to find out when we launch!</p>
                             </div>
-                            <script type="text/javascript"
-                                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-                            <script
-                                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
                         </div>
                     </div>
                 </div>
