--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                 <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-4">
-                            <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                            <a href="https://www.facebook.com/velofkt" target="_blank"><i class="bi-facebook fs-3"></i></a>
                         </li>
                         <li class="list-inline-item me-4">
-                            <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                            <a href="https://www.twitter.com/velofkt" target="_blank"><i class="bi-twitter fs-3"></i></a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                            <a href="https://www.instagram.com/velofkt" target="_blank"><i class="bi-instagram fs-3"></i></a>
                         </li>
                     </ul>
                 </div>
