--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Velo FKT - Plan, share and follow cycling's Fastest Known Times</title>
+    <title>Velo FKT - Plan, share &amp; follow cycling's Fastest Known Times</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -33,7 +33,7 @@
                 <div class="col-xl-6">
                     <div class="text-center text-white">
                         <!-- Page heading-->
-                        <h1 class="mb-5">Plan, share and follow cycling's Fastest Known Times</h1>
+                        <h1 class="mb-5">Plan, share &amp; follow cycling's Fastest Known Times</h1>
 
                         <div id="mc_embed_shell">
 
