Adds social media preview meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+
+    <meta property="og:url" content="https://www.velofkt.cc">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Velo FKT">
+    <meta property="og:description" content="Plan, share & follow cycling's Fastest Known Times">
+    <meta property="og:image" content="/assets/android-chrome-512x512.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="velofkt.cc">
+    <meta property="twitter:url" content="https://www.velofkt.cc">
+    <meta name="twitter:title" content="Velo FKT">
+    <meta name="twitter:description" content="Plan, share & follow cycling's Fastest Known Times">
+    <meta name="twitter:image" content="/assets/android-chrome-512x512.png">
+
     <title>Velo FKT - Plan, share &amp; follow cycling's Fastest Known Times</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
