--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Velo FKT">
     <meta property="og:description" content="Plan, share & follow cycling's Fastest Known Times">
-    <meta property="og:image" content="/assets/android-chrome-512x512.png">
+    <meta property="og:image" content="https://www.velofkt.cc/assets/android-chrome-512x512.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="velofkt.cc">
     <meta property="twitter:url" content="https://www.velofkt.cc">
     <meta name="twitter:title" content="Velo FKT">
     <meta name="twitter:description" content="Plan, share & follow cycling's Fastest Known Times">
-    <meta name="twitter:image" content="/assets/android-chrome-512x512.png">
+    <meta name="twitter:image" content="https://www.velofkt.cc/assets/android-chrome-512x512.png">
 
     <title>Velo FKT - Plan, share &amp; follow cycling's Fastest Known Times</title>
     <!-- Favicon-->
