Adds links to strava club in the footer

--- a/index.html
+++ b/index.html
@@ -113,8 +113,13 @@
                         <li class="list-inline-item me-4">
                             <a href="https://www.twitter.com/velofkt" target="_blank"><i class="bi-twitter fs-3"></i></a>
                         </li>
-                        <li class="list-inline-item">
+                        <li class="list-inline-item me-4">
                             <a href="https://www.instagram.com/velofkt" target="_blank"><i class="bi-instagram fs-3"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.strava.com/clubs/velofkt" target="_blank"><i class="bi-strava fs-3">
+                                <img src="assets/img/icon-strava.png" width="32" height="32" />
+                            </i></a>
                         </li>
                     </ul>
                 </div>
