Updates holding page titles

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="text-center text-white">
                         <!-- Page heading-->
                         <h1 class="mb-5">Plan, share &amp; follow cycling's Fastest Known Times</h1>
+                        <h2 class="mb-3">Launching soon&hellip;</h2>
 
                         <div id="mc_embed_shell">
 
@@ -71,7 +72,7 @@
                                             type="text" name="b_97f1bc02efa56031b67a2b00f_fc7b4ce646" tabindex="-1"
                                             value=""></div>
                                 </form>
-                                <p>Subscribe to find out when we launch!</p>
+                                <h3>Subscribe to find out when we launch!</h3>
                             </div>
                         </div>
                     </div>
